<resources>
    <string name="app_name">My App</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="account_details">Detalhes da Conta</string>
    <string name="private_account">Conta Privada</string>
    <string name="email_available">E-mail Visível</string>
    <string name="active_account">Conta Ativa</string>
    <string name="change_password">Mudar Senha</string>
    <string name="settings_account">Configurações da Conta</string>
    <string name="settings_theme">Configurações do Tema</string>
    <string name="display_brightness">Brilho da Tela:</string>
    <string name="appearance">Aparência</string>
    <string name="blue">Azul</string>
    <string name="red">Verm</string>
    <string name="green">Verd</string>
    <string name="yellow">Amar</string>
    <string name="pink">Rosa</string>
    <string name="night_mode">Modo Noturno</string>
    <string name="name">Nome:</string>
    <string name="email">Email:</string>
    <string name="nick">Nick:</string>
    <string name="salve">Salvar</string>
    <string name="password">Senha Atual:</string>
    <string name="new_password">Senha Nova:</string>

    <string name="font_style_prompt">Escolha uma Fonte</string>
    <string-array name="font_style_arrays">
        <item>Fonte 1</item>
        <item>Fonte 2 </item>
        <item>Fonte 3</item>
        <item>Fonte 4</item>
        <item>Fonte 5</item>
        <item>Fonte 6</item>
        <item>Fonte 7</item>
        <item>Fonte 8</item>
    </string-array>

    <string name="font_size_prompt">Escolha uma Tamanho</string>
    <string name="password_updated_successfully">Senha Alterada Com Sucesso!</string>
    <string-array name="font_size_arrays">
        <item>Tamanho 1</item>
        <item>Tamanho 2 </item>
        <item>Tamanho 3</item>
        <item>Tamanho 4</item>
        <item>Tamanho 5</item>
        <item>Tamanho 6</item>
        <item>Tamanho 7</item>
        <item>Tamanho 8</item>
    </string-array>
</resources>
