<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bdc8d2"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/settings_theme"
        android:textSize="25sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewBrightness"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/textViewDisplayBrightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/display_brightness"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBarBrightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:max="100" />

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/appearance"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewAccountDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/night_mode"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonBlue"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3660ea"
                    android:text="@string/blue"
                    android:textSize="@dimen/size_text_radio" />

                <RadioButton
                    android:id="@+id/radioButtonRed"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ea3639"
                    android:text="@string/red"
                    android:textSize="@dimen/size_text_radio" />

                <RadioButton
                    android:id="@+id/radioButtonGreen"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#35e200"
                    android:text="@string/green"
                    android:textSize="@dimen/size_text_radio" />

                <RadioButton
                    android:id="@+id/radioButtonYellow"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fcfc15"
                    android:checked="false"
                    android:duplicateParentState="false"
                    android:text="@string/yellow"
                    android:textSize="@dimen/size_text_radio" />

                <RadioButton
                    android:id="@+id/radioButtonPink"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ee00ff"
                    android:text="@string/pink"
                    android:textSize="@dimen/size_text_radio" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinnerFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/font_style_arrays"
                android:prompt="@string/font_style_prompt" />

            <Spinner
                android:id="@+id/spinnerFontSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/font_size_arrays"
                android:prompt="@string/font_size_prompt" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
